Updated education and resume

--- a/src/app/home/education/education.component.html
+++ b/src/app/home/education/education.component.html
@@ -52,13 +52,14 @@
               Master of Applied Computer Science
               <em class="highlight">|</em> Concordia University
             </h4>
-            <h5>September, 2022 - June, 2024</h5>
-            <p>Credits earned: 34</p>
+            <h5>September, 2022 - December, 2024</h5>
+            <p>Credits earned: 46</p>
             <p>
               Relevant Courses: Algorithm Design Techniques, Distributed System
               Design, Computer Networks, Software Design Methodologies, Theory
               of Computer Science, Artifical Intelligence, Programming & Problem
-              Solving.
+              Solving, Software Refactoring, Machine Learning, Software Project
+              Management.
             </p>
           </div>
 
